add smoke test in gh action